log/build_2024-05-17_20-35-14/alma_ultrasound/stderr.log
  File "/home/pi/robotik_alma_ws/install/alma_ultrasound/lib/python3.10/site-packages/alma_ultrasound/ultrasound_pub.py", line 8
    def__init__(self):
                     ^
SyntaxError: invalid syntax

